--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A lightweight starter kit for building a Node-based API server",
   "main": "server.js",
   "scripts": {
-    "start": "node fileName.js",
-    "start:dev": "nodemon fileName.js",
+    "start": "node server.js",
+    "start:dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
